# jack-dinsmore.github.io

./: .gitmodules  README.md  index.html
about/: about.html
blog/code/linear_fit_demo/: Cargo.toml  index.html
blog/code/linear_fit_demo/src/: lib.rs
blog/code/linear_fit_demo/src/wikid_wasm/: mod.rs
blog/code/linear_fit_demo/src/wikid_wasm/element/: button.rs  dynamic_plot.rs  slider.rs
blog/code/mh_demo/: Cargo.toml
blog/code/mh_demo/src/: lib.rs
blog/code/rust_wasm_project/: Cargo.toml  test.html
blog/code/rust_wasm_project/pkg/: package.json  rust_wasm_project.d.ts  rust_wasm_project.js  rust_wasm_project_bg.wasm  rust_wasm_project_bg.wasm.d.ts
blog/code/rust_wasm_project/src/: lib.rs
blog/html/: bayesian.html  distributions.html  freq-bayesian.html  frequentist-use.html  frequentist.html  gaussian.html  gaussian2.html  high-dimension.html  index.html  jackknife.html  line.html  line2.html  mcmc.html  model-selection-p.html  model-selection.html  neural-nets.html  parameter-fitting.html  probability.html  simulation.html  variance.html
content/: contact.html  cv.html  mplstyle.html  other.html  research.html  thesis.html
css/: intro.css  main.css
filaments/: filament.html  filaments.html  index.html
files/: mplstyle.mplstyle.txt
home/: home.html
js/: animate.js  intro.js
leakagelib/: .buildinfo  .buildinfo.bak  background_estimation.html  chandra_image.html  faq.html  fitting.html  genindex.html  index copy.html  index.html  installation.html  leakage_prediction.html  leakagelib.html  leakagelib.ps_fit.html  leakagelib_bkg.html  leakagelib_cxo.html  objects.inv  py-modindex.html  qna.html  search.html  searchindex.js
leakagelib/_sources/: index copy.rst  qna.rst
lightspeedpy/: .buildinfo  contribute.html  genindex.html  index.html  installation.html  lightspeedpy.cube.html  lightspeedpy.html  lightspeedpy.image.html  lightspeedpy.lc.html  objects.inv  py-modindex.html  search.html  searchindex.js
old/: index.html
old/css/: intro.css
other/: other.html
physics/: physics.html
projects/: projects.html
(+28 files in other folders)
