[package]
name = "linear_fit_demo"
version = "0.1.0"
authors = ["Jack Dinsmore <jtd@stanford.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wikid_wasm = { git = "https://github.com/jack-dinsmore/wikid_wasm.git" }
wasm-bindgen = "0.2.92"
rand_distr = "0.4.3"
getrandom = { version = "0.2.8", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }
web-sys = "0.3.69"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

