[package]
name = "mh_demo"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wikid_wasm = { git = "https://github.com/jack-dinsmore/wikid_wasm.git" }
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
getrandom = { version = "0.2.8", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
opt-level = "s"
